<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="image">image</string>
    <string name="register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add Post</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="add_post_fragment">Add Post Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="information">Information</string>
    <string name="save">Save</string>
    <string name="write_your_text_here">Write your text here ...</string>
    <string name="send">Send</string>
    <string name="post_theme">Post Theme</string>
    <string name="post_theme_">Post Theme ...</string>
    <string name="write_comment">Oz pikrinizdi qaldirin</string>
</resources>