<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:hint="@string/username"
        android:paddingStart="@dimen/margin_standard"
        android:paddingEnd="@dimen/margin_standard"
        android:background="@drawable/et_shape"
        android:drawableEnd="@drawable/icon_edit"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:hint="@string/phone_number"
        android:paddingStart="@dimen/margin_standard"
        android:paddingEnd="@dimen/margin_standard"
        android:background="@drawable/et_shape"
        android:drawableEnd="@drawable/icon_edit"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:hint="@string/email_address"
        android:paddingStart="@dimen/margin_standard"
        android:paddingEnd="@dimen/margin_standard"
        android:background="@drawable/et_shape"
        android:drawableEnd="@drawable/icon_edit"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInformation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/etEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:hint="@string/information"
        android:paddingStart="@dimen/margin_standard"
        android:paddingEnd="@dimen/margin_standard"
        android:background="@drawable/et_shape"
        android:drawableEnd="@drawable/icon_edit"
        android:lines="5"
        android:gravity="start|top"
        android:paddingTop="@dimen/margin_standard"
        android:scrollbars="vertical"
        android:maxLines="5"
        android:inputType="textImeMultiLine"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInformation"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/save"
        android:textSize="18sp"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>